--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +8,7 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+{% block content %}
 
 <h1>Edgar Santana</h1>
 <ul id="skills">
@@ -42,6 +44,6 @@ I started teaching myself how to code around 7 years ago and I fell in love with
 <footer>
 	<p class="copyright">Copyright 2021, Edgar Santana</p>
 </footer>
-
+    {% endblock %}
 </body>
 </html>
