--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,8 +20,6 @@
 </nav>
 
 <hr>
-
-<h2><u>Front-End Projects</u></h2>
 
 
 
