--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -1,32 +1,7 @@
 {% extends 'base.html' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset = "utf-8">
-	<title>My Portfolio | Contact Me</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
 
-<h1>Contact Me</h1>
+{% block title %}Contact Me{% endblock %}
 
-<nav class="navigation">
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="portfolio.html">My Portfolio</a></li>
-		<li><a href="#">Contact Me</a></li>
-	</ul>
-</nav>
-
-<hr>
-
-
-
-</div>
-<footer>
-	<p class="copyright">Copyright 2021, Edgar Santana</p>
-</footer>
-
-</body>
-</html>
+{% block content %}
+Contact Page
+{% endblock%}
