--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}My Portfolio{% endblock %}</title>
 </head>
 <body>
+{% include 'navbar.html' %}
     <main>
     {% block content %}
     {% endblock %}
