--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Contact Me{% endblock %}
+{% block title %}Contact{% endblock %}
 
 {% block content %}
 Contact Page
