--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -32,13 +32,7 @@ I started teaching myself how to code around 7 years ago and I fell in love with
 
 <hr>
 
-<nav class="navigation">
-	<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="portfolio.html">My Portfolio</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
-</nav>
+{% include 'navbar.html' %}
 
 <footer>
 	<p class="copyright">Copyright 2021, Edgar Santana</p>
