--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -10,13 +10,7 @@
 
 <h1>My Portfolio</h1>
 
-<nav class="navigation">
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="#">My Portfolio</a></li>
-		<li><a href="contact.html">Contact</a></li>
-	</ul>
-</nav>
+{% include 'navbar.html' %}
 
 <hr>
 
