--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}My Portfolio{% endblock %}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-{% include 'navbar.html' %}
     <main>
     {% block content %}
     {% endblock %}
