--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -3,5 +3,8 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-Contact Page
+<h1>Contact Me</h1>
+
+{% include 'navbar.html' %}
+
 {% endblock%}
