--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -1,7 +1,10 @@
-<div>
-    
-    <span>Home</span>
-    <span>My Portfolio</span>
-    {% url 'contact' as contact_url %}
-    <span>{% if request.path == contact_url %}Contact{% else %}<a href="{% url 'contact' %}">Contact</a>{% endif %}</span>
-</div>
+<nav class="navigation">
+	<ul>
+        {% url 'index' as index_url %}
+		<li>{% if request.path == index_url %}Home{% else %}<a href="{% url 'index' %}">Home</a>{% endif %}</li>
+		{% url 'portfolio' as portfolio_url %}
+        <li>{% if request.path == portfolio_url %}My Portfolio{% else %}<a href="{% url 'portfolio' %}">My Portfolio</a>{% endif %}</li>
+        {% url 'contact' as contact_url %}
+		<li>{% if request.path == contact_url %}Contact{% else %}<a href="{% url 'contact' %}">Contact</a>{% endif %}</li>
+	</ul>
+</nav>
