--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>{% block title %}My Portfolio{% endblock %}</title>
+	<meta charset = "utf-8">
+	<title>{% block title %}My Portfolio{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <main>
-    {% block content %}
-    {% endblock %}
-    </main>
+{% block content %}
+{% endblock%}
+<footer>
+	<p class="copyright">Copyright 2021, Edgar Santana</p>
+</footer>
 </body>
 </html>
