--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset = "utf-8">
-	<title>My Portfolio | Portfolio</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 
 <h1>My Portfolio</h1>
 
@@ -80,9 +74,5 @@
 	</div>
 
 </div>
-<footer>
-	<p class="copyright">Copyright 2021, Edgar Santana</p>
-</footer>
 
-</body>
-</html>
+{% endblock %}
