--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -1,10 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset = "utf-8">
 	<title>{% block title %}My Portfolio{% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="{% static 'theme/css/styles.css' %}">
 </head>
 <body>
 {% block content %}
