--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -14,7 +14,7 @@
 	<li>Django</li>
 </ul>
 
-<img id="edgar" src = "{% static 'images/edgar.png' %}" alt="Edgar Santana">
+<img id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
 
 <h2>About Me</h2>
 <div id="socials">
