updated img src

--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -18,8 +18,8 @@
 
 <h2>About Me</h2>
 <div id="socials">
-	<a href="https://www.linkedin.com/in/edgar-santana-211b40128/"><img class="icon" src ="images/linkedin.png" alt="linkedIn Icon"></a>
-	<a href="https://github.com/santanacodec"><img class="icon" src="images/githubblack.png" alt="Github Icon"></a>
+	<a href="https://www.linkedin.com/in/edgar-santana-211b40128/"><img class="icon" src ="{% static 'theme/images/linkedin.png' %}" alt="linkedIn Icon"></a>
+	<a href="https://github.com/santanacodec"><img class="icon" src="{% static 'theme/images/githubblack.png' %}" alt="Github Icon"></a>
 </div>
 <p id="bio">Hello! My name is Edgar Santana and I am a developer based out of Atlanta, Ga. 
 I started teaching myself how to code around 7 years ago and I fell in love with it so I decided to go back to school for it. I have now got my Associates degree in Computer Programming as well as a Java Developer Certificate from Gwinnett Technical College. I am currently a junior at Kennesaw State University going for my bachelor's in Computer Science and I am also working full-time. My skills range from front-end development (HTML, CSS, and JavaScript) to Game Development (Unity, C#, C++) and much more which can be seen in my portfolio.</p>
