--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -1,10 +1,11 @@
+
 * { 
   box-sizing: border-box;
   text-align: center;
 }
 
 body {
-  background-image: url("images/atlbackground.png");
+  background-image: url("../images/atlbackground.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
