--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Home{% endblock %}
+
 {% block content %}
 <h1>Edgar Santana</h1>
 <ul id="skills">
