--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}My Portfolio{% endblock %}
+
 {% block content %}
 
 <h1>My Portfolio</h1>
