--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -13,4 +13,11 @@
 <h2><u>Send Me A Message!</u></h2>
 <img id="message" src = "{% static 'theme/images/mail.png' %}" alt="Mail Image">
 
+<fieldset class="contact">
+    <div  class="container">
+    <label for="name" class="full-name">Full Name</label>
+    <input type="text" id="name" name="user_name" required placeholder="Required">
+    </div>
+</fieldset>
+
 {% endblock %}
