--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -14,6 +14,7 @@
 	<li>Python</li>
 	<li>C#</li>
 	<li>Django</li>
+	<li>React</li>
 </ul>
 
 <img id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
