--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -15,6 +15,7 @@
     <img id="message" src = "{% static 'theme/images/mail.png' %}" alt="Mail Image">
 
     <fieldset class="contact">
+        <legend>Conctact Info</legend>
         <div  class="container">
             <label for="name" class="full-name">Full Name</label>
             <input type="text" id="name" name="user_name" required placeholder="Required">
