--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -242,3 +242,22 @@ footer .copyright {
 }
 
 /** Contact CSS **/
+
+form {
+	padding: 15px;
+	margin: auto;
+}
+
+fieldset {
+  border: none;
+  margin:0;
+  padding:3px;
+}
+
+legend {
+	font-weight: bold;
+	font-size: 18px;
+	padding-bottom: 25px;
+	padding-top: 20px;
+  color: white;
+}
