--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -112,7 +112,7 @@ footer .copyright {
   max-width:25px;
   max-height: 26px;
   margin: 2px;
-  border-radius: 50%
+  border-radius: 50%;
 }
 
 .navigation {
@@ -136,7 +136,7 @@ footer .copyright {
 
 .portfolio-image {
   max-width: 500px;
-  border-radius: 10%
+  border-radius: 10%;
 }
 
 .portfolio-text {
@@ -241,17 +241,17 @@ footer .copyright {
   border-radius: 5%;
 }
 
-/** Contact CSS **/
-
 form {
 	padding: 15px;
 	margin: auto;
 }
 
 fieldset {
-  border: none;
-  margin:0;
-  padding:3px;
+	border: none;
+	margin: 0;
+	padding-top: 3px;
+	padding-right: 0;
+	padding-left: 0;
 }
 
 legend {
@@ -259,5 +259,4 @@ legend {
 	font-size: 18px;
 	padding-bottom: 25px;
 	padding-top: 20px;
-  color: white;
 }
