--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -4,6 +4,7 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
+<head><link rel="stylesheet" href="{% static 'theme/css/contact.css' %}"></head>
 <h1>Contact Me</h1>
 
 {% include 'navbar.html' %}
@@ -11,17 +12,19 @@
 <hr>
 
 <form action="contact.html" method="post">
-    <h2><u>Send Me A Message!</u></h2>
-    <img id="message" src = "{% static 'theme/images/mail.png' %}" alt="Mail Image">
-
+    <div class="form-top">
+        <h2><u>Send Me A Message!</u></h2>
+        <img id="message" src = "{% static 'theme/images/mail.png' %}" alt="Mail Image">
+    </div>
+    <hr>
     <fieldset class="contact">
-        <legend>Conctact Info</legend>
-        <div  class="container">
+        <legend>Contact Info</legend>
+        <div class="container">
             <label for="name" class="full-name">Full Name</label>
             <input type="text" id="name" name="user_name" required placeholder="Required">
         </div>
 
-        <div  class="container">
+        <div class="container">
             <label for="mail">Email Address</label>
             <input type="email" id="mail" name="user_mail" required placeholder="Required">
         </div>
