--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -4,5 +4,10 @@
   text-align: center;
 }
 
+body {
+  background-image: url("../images/atlbackground.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 
