--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -5,16 +5,16 @@
 
 {% block content %}
 <h1>Edgar Santana</h1>
-<ul id="skills">
-	<li>HTML</li>
-	<li>CSS</li>
-	<li>JavaScript</li>
-	<li>Java</li>
-	<li>C++</li>
-	<li>Python</li>
-	<li>C#</li>
-	<li>Django</li>
-	<li>React</li>
+<ul class="list-group">
+	<li class="list-group-item">HTML</li>
+	<li class="list-group-item">CSS</li>
+	<li class="list-group-item">JavaScript</li>
+	<li class="list-group-item">Java</li>
+	<li class="list-group-item">C++</li>
+	<li class="list-group-item">Python</li>
+	<li class="list-group-item">C#</li>
+	<li class="list-group-item">Django</li>
+	<li class="list-group-item">React</li>
 </ul>
 
 <img id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
