--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -4,30 +4,30 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Edgar Santana</h1>
-<ul class="list-group">
-	<li class="list-group-item">HTML</li>
-	<li class="list-group-item">CSS</li>
-	<li class="list-group-item">JavaScript</li>
-	<li class="list-group-item">Java</li>
-	<li class="list-group-item">C++</li>
-	<li class="list-group-item">Python</li>
-	<li class="list-group-item">C#</li>
-	<li class="list-group-item">Django</li>
-	<li class="list-group-item">React</li>
+<h1 class="text-center">Edgar Santana</h1>
+<ul id="skills">
+	<li>HTML</li>
+	<li>CSS</li>
+	<li>JavaScript</li>
+	<li>Java</li>
+	<li>C++</li>
+	<li>Python</li>
+	<li>C#</li>
+	<li>Django</li>
+	<li>React</li>
 </ul>
 
 <img id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
 
-<h2>About Me</h2>
+<h2 class="text-center">About Me</h2>
 <div id="socials">
 	<a href="https://www.linkedin.com/in/edgar-santana-211b40128/"><img class="icon" src ="{% static 'theme/images/linkedin.png' %}" alt="linkedIn Icon"></a>
 	<a href="https://github.com/santanacodec"><img class="icon" src="{% static 'theme/images/githubblack.png' %}" alt="Github Icon"></a>
 </div>
-<p id="bio">Hello! My name is Edgar Santana and I am a developer based out of Atlanta, Ga. 
+<p id="bio" class="text-center">Hello! My name is Edgar Santana and I am a developer based out of Atlanta, Ga. 
 I started teaching myself how to code around 7 years ago and I fell in love with it so I decided to go back to school for it. I have now got my Associates degree in Computer Programming as well as a Java Developer Certificate from Gwinnett Technical College. I am currently a junior at Kennesaw State University going for my bachelor's in Computer Science and I am also working full-time. My skills range from front-end development (HTML, CSS, and JavaScript) to Game Development (Unity, C#, C++) and much more which can be seen in my portfolio.</p>
 
-<hr>
+<hr class="text-center">
 
 {% include 'navbar.html' %}
 
