--- a/project/templates/contact.html
+++ b/project/templates/contact.html
@@ -4,35 +4,36 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-<head><link rel="stylesheet" href="{% static 'theme/css/contact.css' %}"></head>
-<h1>Contact Me</h1>
+<h1 class="text-center">Contact Me</h1>
 
 {% include 'navbar.html' %}
 
 <hr>
 
-<form action="contact.html" method="post">
     <div class="form-top">
-        <h2><u>Send Me A Message!</u></h2>
+        <h2 class="text-center"><u>Send Me A Message!</u></h2>
         <img id="message" src = "{% static 'theme/images/mail.png' %}" alt="Mail Image">
     </div>
     <hr>
+
+    <form action="contact.html" method="post">
     <fieldset class="contact">
         <legend>Contact Info</legend>
-        <div class="container">
+        <div class="form-group">
             <label for="name" class="full-name">Full Name</label>
-            <input type="text" id="name" name="user_name" required placeholder="Required">
+            <input type="text" class="form-control" id="name" name="user_name" required placeholder="Required">
         </div>
 
-        <div class="container">
+        <div class="form-group">
             <label for="mail">Email Address</label>
-            <input type="email" id="mail" name="user_mail" required placeholder="Required">
+            <input type="email" class="form-control" id="mail" name="user_mail" required placeholder="Required">
         </div>
-
-        <label for="message">Message</label>
-        <textarea id="message" name="user_message" rows="5"></textarea>
+        <div class="form-group">
+            <label for="message">Message</label>
+            <textarea class="form-control" id="message" name="user_message" rows="5"></textarea>
+        </div>
     </fieldset>
-    <button type="submit">Send</button>
+    <button type="submit" class="btn btn-primary">Send</button>
 </form>
 
 {% endblock %}
