--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -5,13 +5,13 @@
 
 {% block content %}
 
-<h1>My Portfolio</h1>
+<h1 class="text-center">My Portfolio</h1>
 
 {% include 'navbar.html' %}
 
 <hr>
 
-<h2><u>Front-End Projects</u></h2>
+<h2 class="text-center"><u>Front-End Projects</u></h2>
 
 <div class="first-row">
 	<div id="wrapper-1">
