--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -17,7 +17,7 @@
 	<li>React</li>
 </ul>
 
-<img id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
+<img class="img-fluid"  id="edgar" src = "{% static 'theme/images/edgar.png' %}" alt="Edgar Santana">
 
 <h2 class="text-center">About Me</h2>
 <div id="socials">
