--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -12,68 +12,69 @@
 <hr>
 
 <h2 class="text-center"><u>Front-End Projects</u></h2>
-<div class="row">
-	<div id="wrapper-1" class="text-center col-md">
-		<a href="https://github.com/santanacodec/Techdegree-Project-3"><img class="portfolio-image img-fluid" src="{% static 'theme/images/registrationform.png' %}" alt="Registration Form"></a>
-		<h3>Registration Form</h3>
-		<h4>HTML, CSS</h4>
-		<p class="portfolio-text">A registration form to demonstrate HTML and CSS responsive skills.</p>
-	</div>
 
-	<div id="wrapper-2" class="text-center col-md">
-		<a href="https://github.com/santanacodec/Techdegree-Project-4"><img class="portfolio-image img-fluid" src="{% static 'theme/images/sass.png' %}" alt="css to sass"></a>
-		<h3>Sass Webpage</h3>
-		<h4>SCSS</h4>
-		<p class="portfolio-text">A webpage to demonstrate CSS to Sass conversion</p>
-	</div>
+		<div class="rows">
+			<div id="wrapper-1" class="text-center">
+				<a href="https://github.com/santanacodec/Techdegree-Project-3"><img class="portfolio-image img-fluid" src="{% static 'theme/images/registrationform.png' %}" alt="Registration Form"></a>
+				<h3>Registration Form</h3>
+				<h4>HTML, CSS</h4>
+				<p class="portfolio-text">A registration form to demonstrate HTML and CSS responsive skills.</p>
+			</div>
+		
 
-	<div id="wrapper-3" class="text-center col-md">
-		<a href="https://github.com/santanacodec/Techdegree-Project-5"><img class="portfolio-image img-fluid" src="{% static 'theme/images/photogallery.png' %}" alt="photo gallery"></a>
-		<h3>Jquery Photo Gallery</h3>
-		<h4>HTML, CSS, Jquery</h4>
-		<p class="portfolio-text">A photo gallery webpage to demonstrate jQuery Pluggins.</p>
-	</div>
-</div>
+			<div id="wrapper-2" class="text-center">
+				<a href="https://github.com/santanacodec/Techdegree-Project-4"><img class="portfolio-image img-fluid" src="{% static 'theme/images/sass.png' %}" alt="css to sass"></a>
+				<h3>Sass Webpage</h3>
+				<h4>SCSS</h4>
+				<p class="portfolio-text">A webpage to demonstrate CSS to Sass conversion</p>
+			</div>
 
-<div class="row">
-	<div id="wrapper-4" class="text-center col-md">
-		<a href="https://github.com/santanacodec/Techdegree-Project-6"><img class="portfolio-image img-fluid" src="{% static 'theme/images/wheeloffortune.png' %}" alt="Wheel of fortune game"></a>
-		<h3>Wheel Of Fortune Game</h3>
-		<h4>JavaScript</h4>
-		<p class="portfolio-text">A Wheel of Fortune game to demonstrate JavaScript web development</p>
-	</div>
 
-	<div id="wrapper-5" class="text-center col-md">
-		<a href="https://github.com/santanacodec/Tic-Tac-Toe-Game"><img class="portfolio-image img-fluid" src="{% static 'theme/images/tictactoe.png' %}" alt="Tic tac toe Game"></a>
-		<h3>Tic Tac Toe</h3>
-		<h4>HTML, Bootstrap, Javascript</h4>
-		<p class="portfolio-text">I tic tac toe game made using html, Bootstrap, css and Javascript.</p>
-	</div>
-</div>
+			<div id="wrapper-3" class="text-center">
+				<a href="https://github.com/santanacodec/Techdegree-Project-5"><img class="portfolio-image img-fluid" src="{% static 'theme/images/photogallery.png' %}" alt="photo gallery"></a>
+				<h3>Jquery Photo Gallery</h3>
+				<h4>HTML, CSS, Jquery</h4>
+				<p class="portfolio-text">A photo gallery webpage to demonstrate jQuery Pluggins.</p>
+			</div>
+		</div>
 
-<h2 class="text-center"><u>Programming Projects</u></h2>
 
-<div class="row">
-	<div id="wrapper-6" class="text-center">
-		<a href="https://github.com/santanacodec/Introduction-to-Java-Programming"><img class="portfolio-image img-fluid" src="{% static 'theme/images/javabook.png' %}" alt="java projects"></a>
-		<h3>Java GTC Projects</h3>
-		<h4>Java</h4>
-		<p class="portfolio-text">Java Assignments from Gwinnett Technical College. Goes over Object-Oriented Programming, data structures, algorithms, etc.</p>
-	</div>
+		<div id="wrapper-4" class="text-center">
+			<a href="https://github.com/santanacodec/Techdegree-Project-6"><img class="portfolio-image img-fluid" src="{% static 'theme/images/wheeloffortune.png' %}" alt="Wheel of fortune game"></a>
+			<h3>Wheel Of Fortune Game</h3>
+			<h4>JavaScript</h4>
+			<p class="portfolio-text">A Wheel of Fortune game to demonstrate JavaScript web development</p>
+		</div>
 
-	<div id="wrapper-7" class="text-center">
-		<a href="https://github.com/santanacodec/ASP-FinalGroupProject-WindowsLoginPage"><img class="portfolio-image img-fluid" src="{% static 'theme/images/windowsloginpage.png' %}" alt="Windows login page"></a>
-		<h3>Windows Login Page</h3>
-		<h4>C#, ASP.Net</h4>
-		<p class="portfolio-text">A Windows login page for a group project for my Advanced Systems Projects class. My job was to design and code a login page using C# ASP.Net and connect it to the back end.</p>
-	</div>
+		<div id="wrapper-5" class="text-center">
+			<a href="https://github.com/santanacodec/Tic-Tac-Toe-Game"><img class="portfolio-image img-fluid" src="{% static 'theme/images/tictactoe.png' %}" alt="Tic tac toe Game"></a>
+			<h3>Tic Tac Toe</h3>
+			<h4>HTML, Bootstrap, Javascript</h4>
+			<p class="portfolio-text">I tic tac toe game made using html, Bootstrap, css and Javascript.</p>
+		</div>
 
-	<div id="wrapper-8" class="text-center">
-		<a href="https://github.com/santanacodec/ApplePickerPrototype"><img class="portfolio-image img-fluid" src="{% static 'theme/images/applepicker.png' %}" alt="Apple Picker Game"></a>
-		<h3>Apple Picker Prototype</h3>
-		<h4>C#, Unity Engine</h4>
-		<p class="portfolio-text">An apple picker game developed using the Unity Engine for GTC</p>
-	</div>
-</div>
 
+	<h2 class="text-center"><u>Programming Projects</u></h2>
+
+
+		<div id="wrapper-6" class="text-center">
+			<a href="https://github.com/santanacodec/Introduction-to-Java-Programming"><img class="portfolio-image img-fluid" src="{% static 'theme/images/javabook.png' %}" alt="java projects"></a>
+			<h3>Java GTC Projects</h3>
+			<h4>Java</h4>
+			<p class="portfolio-text">Java Assignments from Gwinnett Technical College. Goes over Object-Oriented Programming, data structures, algorithms, etc.</p>
+		</div>
+
+		<div id="wrapper-7" class="text-center">
+			<a href="https://github.com/santanacodec/ASP-FinalGroupProject-WindowsLoginPage"><img class="portfolio-image img-fluid" src="{% static 'theme/images/windowsloginpage.png' %}" alt="Windows login page"></a>
+			<h3>Windows Login Page</h3>
+			<h4>C#, ASP.Net</h4>
+			<p class="portfolio-text">A Windows login page for a group project for my Advanced Systems Projects class. My job was to design and code a login page using C# ASP.Net and connect it to the back end.</p>
+		</div>
+
+		<div id="wrapper-8" class="text-center">
+			<a href="https://github.com/santanacodec/ApplePickerPrototype"><img class="portfolio-image img-fluid" src="{% static 'theme/images/applepicker.png' %}" alt="Apple Picker Game"></a>
+			<h3>Apple Picker Prototype</h3>
+			<h4>C#, Unity Engine</h4>
+			<p class="portfolio-text">An apple picker game developed using the Unity Engine for GTC</p>
+		</div>
 {% endblock %}
