--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   margin-top: 10px;
-  font-size: 90px;
+  font-size: 95px;
   font-weight: lighter;
   color: white;
 }
@@ -64,11 +64,15 @@ footer .copyright {
 }
 
 #skills {
-  margin-top: 25px;
+  margin-top: 45px;
   margin-bottom: 10px;
 }
 
 #skills li {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  padding-left: 4px;
+  padding-right: 4px;
   border-radius: 6px;
   background: purple;
   color: white;
@@ -142,17 +146,19 @@ footer .copyright {
   color: white;
 }
 
-/*
+
 .portfolio-image:hover {
   box-shadow: 0 0 40px white;
   border: solid 3px black;
 }
-*/
 
-.rows {
-  display: inline;
-  max-width: 100%;
+.col {
+  margin-top: 20px;
+  margin-left: 45px;
+  margin-right: 45px;
+  margin-bottom: 20px;
 }
+
 
 
 #wrapper-1 {
@@ -162,7 +168,6 @@ footer .copyright {
   padding: 20px;
   border-radius: 5%;
 }
-
 
 
 #wrapper-2 {
