--- a/project/templates/navbar.html
+++ b/project/templates/navbar.html
@@ -4,7 +4,7 @@
 		<li>{% if request.path == index_url %}Home{% else %}<a href="{% url 'index' %}">Home</a>{% endif %}</li>
 		{% url 'public:portfolio' as portfolio_url %}
         <li>{% if request.path == portfolio_url %}My Portfolio{% else %}<a href="{% url 'portfolio' %}">My Portfolio</a>{% endif %}</li>
-        {% url 'public:contact' as contact_url %}
+        {% url 'contact:contact' as contact_url %}
 		<li>{% if request.path == contact_url %}Contact{% else %}<a href="{% url 'contact' %}">Contact</a>{% endif %}</li>
 	</ul>
 </nav>
