--- a/project/templates/index.html
+++ b/project/templates/index.html
@@ -24,8 +24,7 @@
 	<a href="https://www.linkedin.com/in/edgar-santana-211b40128/"><img class="icon" src ="{% static 'theme/images/linkedin.png' %}" alt="linkedIn Icon"></a>
 	<a href="https://github.com/santanacodec"><img class="icon" src="{% static 'theme/images/githubblack.png' %}" alt="Github Icon"></a>
 </div>
-<p id="bio" class="text-center">Hello! My name is Edgar Santana and I am a developer based out of Atlanta, Ga. 
-I started teaching myself how to code around 7 years ago and I fell in love with it so I decided to go back to school for it. I have now got my Associates degree in Computer Programming as well as a Java Developer Certificate from Gwinnett Technical College. I am currently a junior at Kennesaw State University going for my bachelor's in Computer Science and I am also working full-time. My skills range from front-end development (HTML, CSS, and JavaScript) to Game Development (Unity, C#, C++) and much more which can be seen in my portfolio.</p>
+<p id="bio" class="text-center">Hello! My name is Edgar Santana and I am a developer based out of Atlanta, Ga. I built this website (using Bootstrap and Django) in hopes of showcasing my projects and work. I have an Associates degree in Computer Programming as well as a Java Developer Certificate from Gwinnett Technical College. I am currently a junior at Kennesaw State University going for my bachelor's in Computer Science. My skills range from front-end development (HTML, CSS, and JavaScript) to Game Development (Unity, C#, C++) and much more which can be seen in my portfolio.</p>
 
 <hr class="text-center">
 
