--- a/project/templates/portfolio.html
+++ b/project/templates/portfolio.html
@@ -78,5 +78,14 @@
 			<p class="portfolio-text">An apple picker game developed using the Unity Engine for GTC</p>
 		</div>
 	</div>
+	<div class="row justify-content-center">
+		<div id="wrapper-9" class="text-center col">
+			<a href="https://github.com/santanacodec/Starting-Out-With-Cpp"><img class="portfolio-image img-fluid" src="{% static 'theme/images/cppbook.png' %}" alt="java projects"></a>
+			<h3>C++ GTC Projects</h3>
+			<h4>C++</h4>
+			<p class="portfolio-text">C++ Assignments from Gwinnett Technical College. Goes over basics, Object-Oriented Programming, data structures, algorithms, etc.</p>
+		</div>
+
+	</div>
 </div>
 {% endblock %}
