--- a/static/theme/css/styles.css
+++ b/static/theme/css/styles.css
@@ -7,6 +7,7 @@ body {
   background-image: url("../images/atlbackground.png");
   background-repeat: no-repeat;
   background-size: cover;
+  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -24,6 +25,7 @@ h2 {
 h3 {
   color: white;
   font-size: 22px;
+  padding-top: 5px;
 }
 
 h4 {
@@ -64,7 +66,7 @@ footer .copyright {
 }
 
 #skills {
-  margin-top: 45px;
+  margin-top: 30px;
   margin-bottom: 10px;
 }
 
@@ -219,6 +221,14 @@ footer .copyright {
 }
 
 #wrapper-8 {
+  max-width: 450px;
+  max-height: 575px;
+  background-color: hsl(0,0%,0%, .4);
+  padding: 20px;
+  border-radius: 5%;
+}
+
+#wrapper-9 {
   max-width: 450px;
   max-height: 575px;
   background-color: hsl(0,0%,0%, .4);
